--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ searchable: "true"
     {% for code in codes %}
       <div class="col-md-6 cheat-code">
         <div class="card">
-          <a href="http://netflix.com/browse/genre/{{ code.genre }}" data-code-genre="{{ code.genre }}" data-code-id="{{ code.id }}" class="link-div">
+          <a href="http://netflix.com/browse/genre/{{ code.id }}" data-code-genre="{{ code.genre }}" data-code-id="{{ code.id }}" class="link-div">
           <div class="row">
             <div class="col-xs-9">
               <div class="icon-name">
