--- a/about/index.html
+++ b/about/index.html
@@ -4,16 +4,14 @@ title: "About"
 navbar: "about"
 header: "About Netflix Cheatcodes"
 ---
+<section class="about-page palette">
 
-<section id="about" class="about-page palette">
-<div id="about-banner">
+  <div class="container">
+    <div class="row" id="code-cards-row-wrap">
 
-  <div class="container container-narrow horizontal-padding-small paper-material">
-  <div class="row">
+        <p>Netflix cheat codes filter as seen first here: <a href="https://medium.com/@unblock.com/netflix-cheat-codes-the-open-sesame-of-entertainment-7fb0b75a847f#.ml0xm1kx5" target="blank">https://medium.com/@unblock.com/netflix-cheat-codes-the-open-sesame-of-entertainment-7fb0b75a847f#.ml0xm1kx5</a></p>
 
-    <p>Netflix cheat codes filter as seen first here: <a href="https://medium.com/@unblock.com/netflix-cheat-codes-the-open-sesame-of-entertainment-7fb0b75a847f#.ml0xm1kx5" target="blank">https://medium.com/@unblock.com/netflix-cheat-codes-the-open-sesame-of-entertainment-7fb0b75a847f#.ml0xm1kx5</a></p>
-
-  </div><!-- /.row -->
+      </div><!-- /.row -->
   </div><!-- /.container -->
 
 </div><!-- /#about-banner -->
