--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@ searchable: "true"
     {% for code in codes %}
       <div class="col-md-6 cheat-code">
         <div class="card">
-          <a href="http://netflix.com/browse/genre/{{ code.id }}" data-code-genre="{{ code.genre }}" data-code-id="{{ code.id }}" class="link-div">
+          <a href="http://netflix.com/browse/genre/{{ code.id }}" data-code-genre="{{ code.genre }}" data-code-id="{{ code.id }}" class="link-div" target="_blank">
           <div class="row">
             <div class="col-xs-9">
-              <div class="icon-name">
+              <div class="icon-genre">
                 {{ code.genre }}
               </div>
             </div>
-            <div class="col-xs-3">
-              <div class="icon-name">
+            <div class="col-xs-3 hidden-xs">
+              <div class="icon-id">
                 {{ code.id }}
               </div>
             </div>
