Update about and footer.

--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,14 @@ header: "About Netflix Cheatcodes"
   <div class="container">
     <div class="row" id="code-cards-row-wrap">
 
-        <p>Netflix cheat codes filter as seen first here: <a href="https://medium.com/@unblock.com/netflix-cheat-codes-the-open-sesame-of-entertainment-7fb0b75a847f#.ml0xm1kx5" target="blank">https://medium.com/@unblock.com/netflix-cheat-codes-the-open-sesame-of-entertainment-7fb0b75a847f#.ml0xm1kx5</a></p>
+        <p>Hi, my name is <a href="http://dereknutile.com/" target="_blank">Derek Nutile</a> and I make web stuff.</p>
+
+        <p>I first saw the <a href="https://www.netflix.com/" target="_blank">Netflix</a> cheat codes on Reddit and the sorce sauce here: <a href="https://medium.com/@unblock.com/netflix-cheat-codes-the-open-sesame-of-entertainment-7fb0b75a847f#.ml0xm1kx5" target="blank">https://medium.com/@unblock.com/netflix-cheat-codes-the-open-sesame-of-entertainment-7fb0b75a847f#.ml0xm1kx5</a>.  A student at George Washington University named <a href="http://benshep.net/" target="_blank">Ben Shepard</a> built a similar category search at <a href="http://netflixcodes.me/" target="_blank">http://netflixcodes.me/</a>.</p>
+
+        <p>I already built a filter for <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">FontAwesome</a> at <a href="http://fadbus.github.io/" target="_blank">http://fadbus.github.io/</a>, so I stole my own code and made the Netflix Cheatcodes filter you're looking at today.  I added some meta data to help the filter find categories easier.  Why don't you check out the open source project or hit me up on Twitter?</p>
+
+        <p><a href="https://twitter.com/dereknutile" target="_blank"><i class="fa fa-twitter"></i>&nbsp;Find me on Twitter</a></p>
+        <p><a href="https://github.com/netflix-cheatcodes/netflix-cheatcodes.github.io" target="_blank"><i class="fa fa-github"></i>&nbsp;Source code on Github</a></p>
 
       </div><!-- /.row -->
   </div><!-- /.container -->
