Drops in a hidden meta span for filtering by extra metadata.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ searchable: "true"
                 {{ code.id }}
               </div>
             </div>
+            <span class="hidden">{{ code.meta }}</span>
           </div>
           <!-- /.row -->
           </a>
